--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokedex</title>
 
-    <!-- Normalize CSS -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -15,7 +14,6 @@
       referrerpolicy="no-referrer"
     />
 
-    <!-- Font Roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,24 +21,18 @@
       rel="stylesheet"
     />
 
-    <!-- Nosso CSS -->
-    <link rel="stylesheet" href="/assets/css/global.css" />
-    <link rel="stylesheet" href="/assets/css/pokedex.css" />
+    <link rel="stylesheet" href="assets/css/global.css" />
+    <link rel="stylesheet" href="assets/css/pokedex.css" />
   </head>
 
   <body>
     <section class="content">
       <h1>Pokedex</h1>
-
       <ol id="pokemonList" class="pokemons"></ol>
-
-      <div class="pagination">
-        <button id="loadMoreButton" type="button">Carregar Mais</button>
-      </div>
     </section>
 
-    <script src="/assets/js/pokemon-model.js"></script>
-    <script src="/assets/js/poke-api.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="assets/js/pokemon-model.js"></script>
+    <script src="assets/js/poke-api.js"></script>
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
