--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
     <section class="content">
       <h1>Pokedex</h1>
       <ol id="pokemonList" class="pokemons"></ol>
+
+      <div class="pagination">
+        <button id="loadMoreButton" type="button">Carregar Mais</button>
+      </div>
     </section>
 
     <script src="assets/js/pokemon-model.js"></script>
