--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <link rel="stylesheet" href="assets/css/global.css" />
     <link rel="stylesheet" href="assets/css/pokedex.css" />
+    <link rel="stylesheet" href="assets/css/pokemon-profile.css" />
   </head>
 
   <body>
@@ -31,7 +32,62 @@
       <ol id="pokemonList" class="pokemons"></ol>
 
       <div class="pagination">
-        <button id="loadMoreButton" type="button">Carregar Mais</button>
+        <button id="loadMoreButton" type="button">Load more</button>
+      </div>
+    </section>
+
+    <section id="pokemonProfile" class="pokemon-profile hidden">
+      <div class="detail-card">
+        <button id="backButton" class="back-button">&larr;</button>
+        <span class="number" id="profilePokemonNumber">#0000</span>
+
+        <div class="pokeball-bg-watermark"></div>
+
+        <div class="detail-header">
+          <div class="pokemon-text-info">
+            <h2 class="name">Pokémon Name</h2>
+            <div class="types">
+              <li class="type">Type 1</li>
+              <li class="type">Type 2</li>
+            </div>
+          </div>
+          <img
+            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
+            alt="Pokemon Image"
+            class="pokemon-image"
+          />
+        </div>
+
+        <div class="detail-info">
+          <div class="tabs-nav">
+            <button class="tab-button active" data-tab="about">About</button>
+            <button class="tab-button" data-tab="base-stats">Base Stats</button>
+            <button class="tab-button" data-tab="weaknesses">Tips</button>
+          </div>
+
+          <div class="tab-content" id="tab-about">
+            <div class="info-group">
+              <span class="info-label">Weight:</span>
+              <span class="info-value" id="profileWeight"></span>
+            </div>
+            <div class="info-group">
+              <span class="info-label">Height:</span>
+              <span class="info-value" id="profileHeight"></span>
+            </div>
+            <div class="info-group">
+              <span class="info-label">Gender:</span>
+              <span class="info-value" id="profileGender"></span>
+            </div>
+            <h4>Abilities:</h4>
+            <ul class="abilities-list"></ul>
+          </div>
+
+          <div class="tab-content hidden" id="tab-base-stats">
+            <ul class="stats-list"></ul>
+          </div>
+
+          <div class="tab-content hidden" id="tab-weaknesses"></div>
+        </div>
       </div>
     </section>
 
